--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,17 +1,13 @@
 .root {
     width: 100%;
-    height: 70px;
+    height: 200px;
     background-color: crimson;
     display: flex;
     flex-direction: row;
     align-items: center;
     justify-content:center;
 
-    div,.title {
-        flex-grow: 1;
-    }
-    .title {
-        font-size: xx-large;
-        color: antiquewhite;
+    div, .imglogo {
+        height: 200px;
     }
 }
