--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,6 @@
 <div class="root">
+    <img class="imglogo" 
+        src="assets/image/logoBiblioteche.jpeg">
     <span class="title">
-        Biblioteche Trentine
     </span>
-    <div>
-        <span>Software</span>
-    </div>
 </div>
