aggiunta barre per ricerca

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -4,3 +4,39 @@
     <span class="title">
     </span>
 </div>
+
+<div class="titolo">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <form class="titolo" action="action_page.php">
+        <input type="text" placeholder="Titolo">
+      </form>
+</div>
+
+<div class="autore">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <form class="autore" action="action_page.php">
+        <input type="text" placeholder="Autore">
+      </form>
+</div>
+
+<div class="casaEditrice">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <form class="casaEditrice" action="action_page.php">
+        <input type="text" placeholder="Casa Editrice">
+      </form>
+</div>
+
+<div class="isbn">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <form class="isbn" action="action_page.php">
+        <input type="text" placeholder="ISBN">
+      </form>
+</div>
+
+<div class="search">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <form class="search" action="action_page.php">
+        <input type="submit" placeholder="Cerca" name="search">
+        <button type="submit"><i class="fa fa-search"></i></button>
+      </form>
+</div>
