sviluppo pagina risultati libri

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,6 +1,8 @@
 <div class="root">
-    <div class= "img-container"> 
-        <img class="imglogo" alt="logo"
-            src="assets/image/logoBiblioteche.jpeg"> 
-    </div>
+    <mat-icon>
+        arrow_back
+    </mat-icon>
+    <mat-icon>
+        home
+    </mat-icon>
 </div>
