--- a/src/app/ricerca-libri/ricerca-libri.component.html
+++ b/src/app/ricerca-libri/ricerca-libri.component.html
@@ -1,4 +1,8 @@
 <div class="content"> 
+    <div class= "img-container"> 
+        <img class="imglogo" alt="logo"
+            src="assets/image/logoBiblioteche.jpeg"> 
+    </div>
     <h1>Ricerca un libro</h1>
     <input type="text" placeholder="Titolo" [(ngModel)]="titolo">
     <input type="text" placeholder="Autore" [(ngModel)]="autore">
