--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,18 +1,12 @@
 .root {
     width: 100%;
-    height: 300px;
+    height: 50px;
     display: flex;
     flex-direction: row;
     align-items: center;
-    justify-content:center;
-
-    .img-container {
-        width: fit-content;
-        height: fit-content;
-        overflow: hidden;
-        border-radius: 50%;
-            .imglogo {
-                height: 200px;
-        } 
+    justify-content:space-between;
+    padding: 20px;
+    mat-icon{
+        font-size:2em;
     }
 }
