Modifiche collegamenti API

--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -1,8 +1,10 @@
 <div class="root">
-    <mat-icon>
+    <mat-icon (click)="back()">
         arrow_back
     </mat-icon>
-    <mat-icon>
-        home
-    </mat-icon>
+    <a routerLink="/">
+        <mat-icon>
+            home
+        </mat-icon>
+    </a>
 </div>
