--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -1,3 +1,6 @@
+* {
+    -webkit-tap-highlight-color: rgba(255,255,255,0);
+}
 .root {
     width: 100%;
     height: 50px;
@@ -8,5 +11,9 @@
     padding: 20px;
     mat-icon{
         font-size:2em;
+    }
+    a {
+        text-decoration: none;
+        color:black;
     }
 }
