--- a/src/app/views/risultati-ricerca/risultati-ricerca.component.html
+++ b/src/app/views/risultati-ricerca/risultati-ricerca.component.html
@@ -2,15 +2,15 @@
     <h1>Risultati ricerca</h1>
     <div class="libro" *ngFor="let libro of results">
         <div class="img-container">
-            <img [src]="libro.titolo">
+            <img [src]="libro.copertina">
         </div>
         <div class="info">
             <h3>{{libro.titolo}}</h3>
             <span>{{libro.autore}}</span>
             <span>{{libro.casaEditrice}}</span>
-            <span>{{libro.isbn}}</span>
-            <span>{{libro.n_copie}}</span>
-            <span>{{libro.versione_digitale}}</span>
+            <span>ISBN {{libro.isbn}}</span>
+            <span><strong>Copie disponibili: </strong>{{libro.n_copie}}</span>
+            <span><strong>Versione digitale </strong>{{libro.versione_digitale?"":"non"}} disponibile</span>
         </div>
     </div>
 </div>
