--- a/src/app/views/risultati-ricerca/risultati-ricerca.component.html
+++ b/src/app/views/risultati-ricerca/risultati-ricerca.component.html
@@ -1,16 +1,22 @@
 <div class="content">
     <h1>Risultati ricerca</h1>
-    <div class="libro" *ngFor="let libro of results">
-        <div class="img-container">
-            <img [src]="libro.copertina">
-        </div>
-        <div class="info">
-            <h3>{{libro.titolo}}</h3>
-            <span>{{libro.autore}}</span>
-            <span>{{libro.casaEditrice}}</span>
-            <span>ISBN {{libro.isbn}}</span>
-            <span><strong>Copie disponibili: </strong>{{libro.n_copie}}</span>
-            <span><strong>Versione digitale </strong>{{libro.versione_digitale?"":"non"}} disponibile</span>
+    <div *ngIf="results.length > 0;else noBooks">
+
+        <div class="libro" *ngFor="let libro of results">
+            <div class="img-container">
+                <img [src]="libro.copertina">
+            </div>
+            <div class="info">
+                <h3>{{libro.titolo}}</h3>
+                <span>{{libro.autore}}</span>
+                <span>{{libro.casaEditrice}}</span>
+                <span>ISBN {{libro.isbn}}</span>
+                <span><strong>Copie disponibili: </strong>{{libro.n_copie}}</span>
+                <span><strong>Versione digitale </strong>{{libro.versione_digitale?"":"non"}} disponibile</span>
+            </div>
         </div>
     </div>
+    <ng-template #noBooks>
+        Nessun libro è stato trovato
+    </ng-template>
 </div>
